# ITBench

./: .ansible-lint  .ansible-lint-ignore  .cz.toml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LEADERBOARD_CISO.md  LEADERBOARD_SRE.md  LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml  renovate.json  requirements.yaml
scenarios/sre/: Makefile  README.md  pyproject.toml
scenarios/sre/docs/: faults.md  scenarios.md  waiters.md
scenarios/sre/group_vars/runner/: experiments.yaml.example  github.yaml.example
scenarios/sre/playbooks/: check_for_specific_alerts_in_firing_state.yaml  clear_kubernetes_events.yaml  generate_agent_bundle.yaml  generate_leaderboard_bundle_status.yaml  manage_agent_access.yaml  manage_applications.yaml  manage_awx.yaml  manage_faults.yaml  manage_recorders.yaml  manage_tools.yaml  scaffold_fault.yaml  scaffold_scenario.yaml
scenarios/sre/roles/applications/tasks/: install_book_info.yaml  install_opentelemetry_demo.yaml
scenarios/sre/roles/awx/meta/: argument_specs.yaml
scenarios/sre/roles/awx/tasks/: configure.yaml  configure_jobs.yaml  configure_projects.yaml  configure_workflows.yaml  install.yaml  install_awx.yaml  install_awx_instances.yaml  install_awx_operator.yaml  main.yaml  (+8 more)
scenarios/sre/tools/awx-ee/: requirements.txt  requirements.yml
scenarios/sre/tools/hello-bench/: Dockerfile
scenarios/sre/tools/kubernetes-topology-monitor/: Dockerfile
scenarios/sre/tools/opentelemetry-collector-builder/: Dockerfile  go.mod  go.sum  manafest.yaml
(+275 files in other folders)
