[project]
name = "ITBench"
version = "1.4.1"
description = "IT Domain AI Agents Benchmarks"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "ansible-core==2.20.4",
    "boto3==1.42.73",
    "jsonschema==4.26.0",
    "kubernetes==35.0.0",
    "molecule==26.3.0",
]

[dependency-groups]
dev = [
    "ansible-builder==3.1.1",
    "ansible-lint==26.3.0",
    "commitizen==4.13.9",
    "detect-secrets",
    "pre-commit==4.5.1",
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", rev = "76a765c2b1a8928824a3d937ebeacf88354b86bb" } # pragma: allowlist secret
